add_library(
    base
    OBJECT
    complexarray.cpp
    complexmatrix.cpp
    global_file.cpp
    global_function.cpp
    global_variable.cpp
    intarray.cpp
    math_integral.cpp
    math_polyint.cpp
    math_sphbes.cpp
    math_ylmreal.cpp
    mathzone.cpp
    mathzone_add1.cpp
    matrix.cpp
    matrix3.cpp
    realarray.cpp
    timer.cpp
    tool_check.cpp
    tool_quit.cpp
    tool_title.cpp
    ylm.cpp
)
