add_library(
    base
    OBJECT
    complexarray.cpp
    complexmatrix.cpp
    element_basis_index.cpp
    export.cpp
    integral.cpp
    inverse_matrix.cpp
    global_file.cpp
    global_function.cpp
    global_variable.cpp
    intarray.cpp
    math_integral.cpp
    math_polyint.cpp
    math_sphbes.cpp
    math_ylmreal.cpp
    mathzone.cpp
    mathzone_add1.cpp
    matrix.cpp
    matrix3.cpp
    memory.cpp
    mymath1.cpp
    mymath3.cpp
    polint.cpp
    realarray.cpp
    sph_bessel.cpp
    sph_bessel_recursive-d1.cpp
    sph_bessel_recursive-d2.cpp
    timer.cpp
    tool_check.cpp
    tool_quit.cpp
    tool_title.cpp
    ylm.cpp
)
